--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=sfg-brewery-gateway
 server.port=9090
-spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.enabled=false
